11.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: microservices.info
      http:
        paths:
          - path: /department/?(.*)
            backend:
              serviceName: department
              servicePort: 8080
